feat(backend and front): Correct flow of departments, cities, and locations when creating an event